# harness-eval

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  TODOS.md  justfile  pyproject.toml
.atv/: observations.jsonl
crates/feedcore/: Cargo.toml
crates/feedcore/src/: date.rs  fetch.rs  lib.rs  model.rs  parse.rs  service.rs  store.rs  text.rs  types.rs
crates/feedctl/: Cargo.toml
crates/feedctl/src/: client.rs  main.rs
crates/feedctl/tests/: cli.rs
crates/feedd/: Cargo.toml
crates/feedd/src/: api.rs  cli.rs  db.rs  fetch.rs  lib.rs  main.rs  models.rs  poll.rs  refresh.rs  server.rs  state.rs  store.rs
crates/feedd/tests/: api.rs  e2e.rs  store.rs
crates/feedgen/: Cargo.toml
crates/feedgen/src/: cli.rs  fixtures.rs  lib.rs  main.rs  serve.rs  server.rs
crates/feedgen/tests/: serve.rs
loglens/: __init__.py  cli.py  parser.py  pyproject.toml
loglens/loglens/: cli.py  parser.py
loglens/tests/: test_loglens.py
run-output/run_01/01-atv-starterkit/: .gitignore  pyproject.toml
run-output/run_01/01-atv-starterkit/src/loglens/: parser.py
run-output/run_01/01-atv-starterkit/tests/: test_analyze.py  test_parser.py
run-output/run_01/02-atv-phoenix/: .gitignore  justfile  pyproject.toml
run-output/run_01/02-atv-phoenix/src/loglens/: analysis.py  cli.py  parser.py
run-output/run_01/02-atv-phoenix/tests/: test_analysis.py  test_cli.py
run-output/run_01/03-working-skill-repo/: .gitignore  AGENTS.md  pyproject.toml
run-output/run_01/03-working-skill-repo/.github/agents/: adversarial-document-reviewer.agent.md  design-lens-reviewer.agent.md  project-standards-reviewer.agent.md  security-lens-reviewer.agent.md
run-output/run_01/03-working-skill-repo/.github/skills/document-review/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-architecture-deepening/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-brainstorm/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-compact/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-configure/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-epic/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-finalize/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-first-principles/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-fix/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-functional-test/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-goal/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-handoff/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-land/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-map/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-models/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-qa/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-regression-snapshot/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-repair/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-research/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-review/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-ship/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-start/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-task/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-troubleshoot/: SKILL.md
run-output/run_01/03-working-skill-repo/.github/skills/kb-work/: SKILL.md
run-output/run_01/03-working-skill-repo/src/loglens/: __init__.py  analyze.py  cli.py  parser.py
run-output/run_01/03-working-skill-repo/tests/: test_analyze.py  test_parser.py
run-output/run_01/04-kprojects/: README.md  pyproject.toml
run-output/run_01/04-kprojects/.github/: copilot-instructions.md
run-output/run_01/04-kprojects/sprints/: 001-loglens-cli.md
run-output/run_01/04-kprojects/sprints/planning/: roadmap.md
run-output/run_01/04-kprojects/src/loglens/: __init__.py  cli.py  parser.py
run-output/run_01/04-kprojects/tests/: test_cli.py
run-output/run_01/05-baseline/: README.md  pyproject.toml
run-output/run_01/05-baseline/loglens/: analyze.py  cli.py
run-output/run_01/05-baseline/tests/: conftest.py  test_analyze.py
run-output/run_01/06-gstack/: .gitignore  README.md  pyproject.toml
run-output/run_01/06-gstack/src/loglens/: __main__.py  cli.py  parse.py  render.py  source.py
run-output/run_01/06-gstack/tests/: conftest.py  test_cli.py  test_source.py
run-output/run_02/01-atv-starterkit/: Cargo.toml  README.md
run-output/run_02/01-atv-starterkit/.atv/: observations.jsonl
run-output/run_02/01-atv-starterkit/crates/feedcore/: Cargo.toml
run-output/run_02/01-atv-starterkit/crates/feedctl/: Cargo.toml
run-output/run_02/01-atv-starterkit/crates/feedgen/: Cargo.toml
run-output/run_02/02-atv-phoenix/: Cargo.toml  justfile
run-output/run_02/02-atv-phoenix/.phoenix-ralph/: done-check.json
run-output/run_02/02-atv-phoenix/crates/feedctl/: Cargo.toml
run-output/run_02/03-working-skill-repo/: Cargo.toml
run-output/run_02/03-working-skill-repo/feedcore/: Cargo.toml
run-output/run_02/03-working-skill-repo/feedcore/src/: api.rs  lib.rs  parse.rs
run-output/run_02/03-working-skill-repo/feedctl/: Cargo.toml
run-output/run_02/03-working-skill-repo/feedd/: Cargo.toml
run-output/run_02/03-working-skill-repo/feedd/src/: fetch.rs  main.rs  store.rs
run-output/run_02/03-working-skill-repo/feedgen/: Cargo.toml
run-output/run_02/03-working-skill-repo/feedgen/src/: fixtures.rs  main.rs
run-output/run_02/04-kprojects/crates/feedgen/: Cargo.toml
run-output/run_02/05-baseline/crates/feedctl/: Cargo.toml
run-output/run_02/05-baseline/crates/feedd/: Cargo.toml
run-output/run_02/06-gstack/crates/feedctl/: Cargo.toml
run-output/run_02/06-gstack/crates/feedd/: Cargo.toml
run-output/run_02/06-gstack/crates/feedhub-core/: Cargo.toml
(+468 files in other folders)
