[workspace]
resolver = "2"
members = ["crates/feedhub-core", "crates/feedd", "crates/feedctl", "crates/feedgen"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
feedhub-core = { path = "crates/feedhub-core" }
feedd = { path = "crates/feedd" }
feedgen = { path = "crates/feedgen" }
