[workspace]
resolver = "2"
members = [
    "crates/feedlib",
    "crates/feedd",
    "crates/feedctl",
    "crates/feedgen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.96"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
quick-xml = "0.36"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", default-features = false, features = ["tls"] }
tiny_http = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
url = "2"
thiserror = "1"
