[package]
name = "feedctl"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive"] }
feedhub-core.workspace = true
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
feedd.workspace = true
feedgen.workspace = true
tempfile = "3.27.0"
