[package]
name = "feedd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "feedhub server: fetches, stores and serves RSS/Atom feeds"

[[bin]]
name = "feedd"
path = "src/main.rs"

[dependencies]
feedcore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tiny_http = { workspace = true }
ureq = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
feedgen = { path = "../feedgen" }
ureq = { workspace = true }
serde_json = { workspace = true }
