[package]
name = "feedgen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive"] }
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"

[dev-dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
tempfile = "3.27.0"
