[project]
name = "loglens"
version = "0.1.0"
description = "Analyze web server access logs in Combined Log Format (CLF)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
loglens = "loglens.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loglens"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
