[project]
name = "loglens"
version = "0.1.0"
description = "A CLI tool that analyzes web server access logs in Combined Log Format (CLF)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
loglens = "loglens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loglens"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
