[project]
name = "loglens"
version = "0.1.0"
description = "A web-access-log analysis CLI for Combined Log Format"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "kenhia" }]
dependencies = []

[project.scripts]
loglens = "loglens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loglens"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
