[project]
name = "loglens"
version = "0.1.0"
description = "Analyze web server access logs in Combined Log Format from the terminal."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
loglens = "loglens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loglens"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
