[workspace]
resolver = "2"
members = ["crates/feedcore", "crates/feedd", "crates/feedctl", "crates/feedgen"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
quick-xml = "0.36"
rusqlite = { version = "0.32", features = ["bundled"] }
tiny_http = "0.12"
ureq = { version = "2", default-features = false, features = ["tls"] }
clap = { version = "4", features = ["derive"] }
feedcore = { path = "crates/feedcore" }

[profile.release]
strip = true
