[workspace]
resolver = "2"
members = ["feedcore", "feedd", "feedctl", "feedgen"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.74"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
tiny_http = "0.12"
ureq = "2"
clap = { version = "4", features = ["derive"] }
feedcore = { path = "feedcore" }

[profile.release]
opt-level = 2
