[package]
name = "feedctl"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "feedctl"
path = "src/main.rs"

[dependencies]
feedcore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
clap = { workspace = true }
