[package]
name = "feedd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "feedd"
path = "src/main.rs"

[dependencies]
feedcore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tiny_http = { workspace = true }
ureq = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = "3"
ureq = { workspace = true }
serde_json = { workspace = true }
