[package]
name = "feedgen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "feedgen"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
tiny_http = { workspace = true }
clap = { workspace = true }
