[package]
name = "feedctl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "feedhub CLI client"

[[bin]]
name = "feedctl"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
clap = { workspace = true }
