[package]
name = "feedctl"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "feedhub CLI client for the feedd REST API."

[[bin]]
name = "feedctl"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
clap.workspace = true
