[package]
name = "feedd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "feedd"
path = "src/main.rs"

[dependencies]
feedlib = { path = "../feedlib" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
ureq = { workspace = true }
tiny_http = { workspace = true }
rusqlite = { workspace = true }
url = { workspace = true }

[dev-dependencies]
feedgen = { path = "../feedgen" }
tempfile = "3"
