[package]
name = "feedhub-core"
description = "Shared types, feed parsing, and date/text normalization for feedhub."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
quick-xml.workspace = true
serde.workspace = true
thiserror.workspace = true
